rework component with Visual Studio Component Builder

--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -32,12 +32,21 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="SmtpComponent, Version=0.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="OpenSpan.Controls, Version=8.0.0.0, Culture=neutral, PublicKeyToken=f5db91edc02d8c5e, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\SmtpComponent\bin\Debug\SmtpComponent.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\OpenSpan\OpenSpan Plug-in for Microsoft Visual Studio 2015\OpenSpan.Controls.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xaml" />
+    <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
@@ -45,6 +54,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SmtpSSL\SmtpSSL.csproj">
+      <Project>{20456b8f-0a2a-43ab-8871-4c3179bcaec3}</Project>
+      <Name>SmtpSSL</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
